# Demeter_metamorphosis

./: .buildinfo  .bumpversion.cfg  .gitignore  README.md  advanced_users.html  constants.py  cost_functions.py  decorators.py  demeter.html  demeter.metamorphosis.html  demeter.utils.html  fig_lddmm_vs_meta_brain.ipynb  fig_lddmm_vs_metamorphoses.ipynb  figs_geodesic_stability_lddmm.ipynb  fill_saves_overview.py  genindex.html  index.html  installation.html  metamorphosis.py  modules.html  my_toolbox.py  my_torchbox.py  objects.inv  py-modindex.html  pyproject.toml  reproducing_kernels.py  requirements.txt  search.html  searchindex.js  sg_execution_times.html  update_readme_version.py  vector_field_to_flow.py
.doctrees/: advanced_users.doctree  demeter.doctree  demeter.metamorphosis.doctree  demeter.utils.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  sg_execution_times.doctree
_sources/: advanced_users.rst.txt  demeter.metamorphosis.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  sg_execution_times.html
demeter/: __init__.py  constants.py  decorators.py  image_3d_visualisation.py  my_bspline.py  my_optim.py  my_toolbox.py  reproducing_kernels.py
draft/: all_scale_norm.ipynb  draft_meta_rotate.py  draft_rotation.py  meta_rotate.py  shooting_vs_pathoptim.ipynb  visualiseGeo_refactor.py
examples/: Euler_vs_Lagrangian_Deformation.ipynb  GALLERY_HEADER.rst  __init__.py  brats_utils.py  dataCost_Variations.ipynb  execute_ixi_template.ipynb  execute_ixi_template.py  (+16 more)
(+188 files in other folders)
